Fixes scrollbars for texts and comments as popups.
HFP-1358

--- a/styles/cp.css
+++ b/styles/cp.css
@@ -395,6 +395,9 @@
   max-height: 80%;
   transition: top 0.2s;
   overflow: hidden;
+
+  display: flex;
+  flex-direction: column;
 }
 
 .h5p-course-presentation .h5p-popup-container.h5p-animate {
@@ -419,22 +422,14 @@
   background: #ddd;
 }
 
-.h5p-course-presentation .h5p-popup-overlay .h5p-advanced-text {
+.h5p-course-presentation .h5p-popup-overlay.h5p-advancedtext {
   font-size: 1em;
   margin-right: 1.5em;
   padding: 0.5em;
 }
 
-.h5p-course-presentation .h5p-popup-overlay.h5p-advanced-text .h5p-popup-container,
-.h5p-course-presentation .h5p-popup-overlay.h5p-popup-comment-field .h5p-popup-container {
-  padding: 2em 0;
-}
-
-.h5p-course-presentation .h5p-popup-overlay.h5p-advanced-text .h5p-popup-container .h5p-popup-wrapper,
+.h5p-course-presentation .h5p-popup-overlay.h5p-advancedtext .h5p-popup-container .h5p-popup-wrapper,
 .h5p-course-presentation .h5p-popup-overlay.h5p-popup-comment-field .h5p-popup-container .h5p-popup-wrapper {
-  position: absolute;
-  box-sizing: border-box;
-  max-height: calc(100% - 4em);
   padding: 0 2em;
   overflow: auto;
   text-align: left;
